--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@contentful/rich-text-html-renderer": "^15.13.1",
     "@uniformdev/canvas": "^16.0.0",
+    "@uniformdev/canvas-contentful": "^16.0.0",
     "@uniformdev/canvas-react": "^16.0.0",
     "@uniformdev/cli": "^16.0.0",
     "@uniformdev/context": "^16.0.0",
     "@uniformdev/context-next": "^16.0.0",
     "@uniformdev/context-react": "^16.0.0",
+    "contentful": "^9.1.29",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0"
