--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "run-s context:manifest dev:next",
+    "dev:next": "next dev -p 3000",
     "start": "next start",
-    "lint": "next lint"
+    "build": "run-s context:manifest build:next",
+    "build:next": "next build",
+    "context:manifest": "uniform context manifest download --output ./lib/context/manifest.json"
   },
   "dependencies": {
     "@contentful/rich-text-html-renderer": "^15.13.1",
@@ -17,8 +19,11 @@
     "@uniformdev/context": "^16.0.0",
     "@uniformdev/context-next": "^16.0.0",
     "@uniformdev/context-react": "^16.0.0",
+    "@uniformdev/optimize-tracker-browser": "^14.2.0",
+    "@uniformdev/optimize-tracker-react": "^14.2.0",
     "contentful": "^9.1.29",
     "next": "12.1.6",
+    "npm-run-all": "^4.1.5",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
